--- a/src/main/webapp/templates/aMeeting.html
+++ b/src/main/webapp/templates/aMeeting.html
@@ -1,5 +1,5 @@
       <div class="panel-body">
-          <p><button type="submit" class="btn btn-default" ng-click="hideStartButton()">Join</button> {{meeting.title}}</button></p>
+          <p><button type="submit" class="btn btn-default" ng-click="hideStartButton()">Join</button> {{meeting.title}}</p>
       </div>
       <div class="panel-footer">
             <p>If you are the meeting host, start the meeting: 
