--- a/src/main/webapp/templates/admin.html
+++ b/src/main/webapp/templates/admin.html
@@ -4,7 +4,7 @@
           <table class="table table-striped table-bordered table-hover table-condensed">
             <tr><th>User</th><th>Meeting Id</th><th>Delete</th>
             <tr ng-repeat="user in users">
-              <td>{{user.id}}</a></td><td>{{user.meetingId}}</td><td><a ng-click="deleteUser(user.id)">delete</a></td>
+              <td>{{user.id}}</td><td>{{user.meetingId}}</td><td><a ng-click="deleteUser(user.id)">delete</a></td>
             </tr>
           </table>
       </div>
