--- a/src/main/webapp/templates/provideMeeting.html
+++ b/src/main/webapp/templates/provideMeeting.html
@@ -3,7 +3,7 @@
             <form ng-submit="startMeeting(meeting)" class="form-inline">
              <input type="text" class="form-control"
                ng-model="meeting.meetingURL" size="30"
-               placeholder="add meeting Id">
+               placeholder="add meeting URL">
              <button type="submit" class="btn btn-primary">Begin</button>
             </form>
       </div>
