--- a/src/main/webapp/templates/provideMeeting.html
+++ b/src/main/webapp/templates/provideMeeting.html
@@ -1,5 +1,5 @@
       <div class="panel-body">
-            <p>You have not provided your meeting id. Please provide it and click Begin.</p>
+            <p>You have not provided your meeting url. Please provide it and click Begin.</p>
             <form ng-submit="startMeeting(meeting)" class="form-inline">
              <input type="text" class="form-control"
                ng-model="meeting.meetingURL" size="30"
